# urban3D_vector_framework

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
SM1/: SM1_Code_3D_Metrics.py  SM1_README.md
SM1/input/: README.md  blocks.dbf  blocks.shp  blocks.shp.xml  blocks.shx  buildings.prj  buildings.shp  buildings.shp.xml  buildings.shx
SM2/: SM2_Code_Typology_Consensus.py  SM2_README.md
SM2/input/: BGRI_Complete_Metrics.csv  schema.ini
figures/: README.md
figures/article/: fig03_elbow.py  fig04_consensus_matrix.py  fig05_kmeans_vs_consensus.py  fig06_radar_profiles.py  fig07_boxplots.py  fig08_pairwise_scatter.py  fig10_typologies_by_parish.py
figures/supplementary_sm2/: figSM2_01_heatmap_freq_parish.py  figSM2_02_heatmap_counts_parish.py  figSM2_03_normalized_profile_parish.py  figSM2_04_pie_charts_parish.py
tests/: conftest.py  test_figures_regression.py  test_smoke.py
