[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "urban3d-vector-framework"
version = "1.0.0"
description = "A reproducible geometric vector framework for 3D urban morphology at the block scale, using Mean Building Volume (MBV), Height Variation Coefficient (HVC), and Mean Sky View Factor (SVF) — accompanying the submitted manuscript."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
# Software author (sole). The accompanying manuscript is co-authored by
# Rossana Estanqueiro, Carla Rebelo, and José António Tenedório (submitted);
# see README.md for the full author list and CRediT roles.
authors = [
  { name = "Rossana Estanqueiro", email = "rossana.estanqueiro@fcsh.unl.pt" },
]
maintainers = [
  { name = "Rossana Estanqueiro", email = "rossana.estanqueiro@fcsh.unl.pt" },
]
keywords = [
  "urban morphology",
  "3D urban typology",
  "consensus clustering",
  "sky view factor",
  "Amadora",
  "GIS",
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
sm1 = [
  "geopandas>=0.13",
  "rasterstats>=0.19",
  "rasterio>=1.3",
]
sm2 = [
  "scikit-learn>=1.3",
  "scipy>=1.10",
]
figures = [
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "pillow>=10.0",  # required by matplotlib to save JPEG output
]
test = [
  "pytest>=7.0",
  "pillow>=10.0",
]

[tool.setuptools]
# This project ships scripts (in SM1/, SM2/, figures/) rather than an importable package,
# so there are no Python packages to discover. The pyproject still drives dependency
# management via `pip install -e ".[sm1,sm2,figures,test]"`.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
